--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Jason Yeo's Website</title>
-  <link rel="stylesheet" href="css/main.css"/>
+  <link rel="stylesheet" href="main.css"/>
   </head>
   <body>
     <h3 class="cero">Jason Yeo</h3>
