--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h3 class="cero">Jason Yeo</h3>
+    <h3 class="cero">Jason Yeo's Website</h3>
      <nav>
     <a href="#" class="uno">Home</a>
     <a href="#" class="dos">Subjects</a>
