added access to IBHOTA

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>Welcome to my <b>WEBSITE</b></br>Use the quick navigation menu or scroll down for relevant information</p>
 <h2>Choose your subjects</h2> 
 <p class="ift">(If Teacher)</p>
-    <ol><a href="#">IB History of the Americas</a></ol>
+    <ol><a href="ibhota.html">IB History of the Americas</a></ol>
     <ol><a href="#">IB Math Studies SL</a></ol>
     <ol><a href="#">IT Academy</a></ol>
     <ol><a href="#">Other</a></ol>
