--- a/ibhota.html
+++ b/ibhota.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <title>Jason Yeo's Website</title>
-  <link rel="stylesheet" href="css/main.css"/>
+ <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <h3 class="cero">Jason Yeo</h3>
+    <h3 class="cero">Jason Yeo's Website</h3>
      <nav>
     <a href="#" class="uno">Home</a>
     <a href="#" class="dos">Subjects</a>
