--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h3 class="cero">Jason Yeo's Website</h3>
      <nav>
-    <a href="#" class="uno">Home</a>
+    <a href="index.html" class="uno">Home</a>
     <a href="#" class="dos">Subjects</a>
     <a href="#" class="tres">Resume</a>
     <a href="#" class="quatro">Contact</a>
