--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 <h2>Choose your subjects</h2> 
 <p class="ift">(If Teacher)</p>
     <ol><a href="ibhota.html">IB History of the Americas</a></ol>
-    <ol><a href="#">IB Math Studies SL</a></ol>
+    <ol><a href="ibms.html">IB Math Studies SL</a></ol>
     <ol><a href="#">IT Academy</a></ol>
     <ol><a href="#">Other</a></ol>
