--- a/ibhota.html
+++ b/ibhota.html
@@ -13,7 +13,7 @@
     <a href="#" class="cinco">Services</a>
        </nav>
      
-    <p>Welcome to my <b>WEBSITE</b></br>This is the IB HOTA part of it</p>
+	  <p>Welcome to my <b>WEBSITE</b></br>This is the IB HOTA part of it</br>HIT SQUAD!!!</p>
 	
 	<ol><a href="#">sample<a></ol>
 	<ol><a href="#">sample<a></ol>
