--- a/index.html
+++ b/index.html
@@ -20,3 +20,10 @@
     <ol><a href="ibms.html">IB Math Studies SL</a></ol>
     <ol><a href="#">IT Academy</a></ol>
     <ol><a href="#">Other</a></ol>
+
+<p>Choose your services required</p>
+<p class="ift">(If here for services)</p>
+    <ol><a href="#">Photoshop Basics (small stuff only)</a></ol>
+    <ol><a href="#">Photoshop Advanced (anything is possible)</a></ol>
+    <ol><a href="#">Video Editing (nothing over 30 minutes long</a></ol>
+    <ol><a href="#">Logo Design (professional requests only)</a></ol>
