--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <ol><a href="#">IT Academy</a></ol>
     <ol><a href="#">Other</a></ol>
 
-<p>Choose your services required</p>
+<h2>Choose your services required</h2>
 <p class="ift">(If here for services)</p>
     <ol><a href="#">Photoshop Basics (small stuff only)</a></ol>
     <ol><a href="#">Photoshop Advanced (anything is possible)</a></ol>
