--- a/ibhota.html
+++ b/ibhota.html
@@ -15,7 +15,7 @@
      
 	  <p>Welcome to my <b>WEBSITE</b></br>This is the IB HOTA part of it</br>HIT SQUAD!!!</p>
 	
-	<ol><a href="#">sample<a></ol>
+	<ol><a href="#">IB HOTA HL IA<a></ol>
 	<ol><a href="#">sample<a></ol>
 	<ol><a href="#">sample<a></ol>
 	<ol><a href="#">sample<a></ol>
