link to daily adgenda

--- a/ibhota.html
+++ b/ibhota.html
@@ -14,6 +14,8 @@
        </nav>
      
 	  <p>Welcome to my <b>WEBSITE</b></br>This is the IB HOTA part of it</br>HIT SQUAD!!!</p>
+
+		<a href="https://docs.google.com/document/d/1rhexyRhV-ntyp5pu3dyw-UJag3kmJTfLw1Xn-LnAmO8/edit?usp=sharing">IB HOTA Daily Adgenda</a>
 	
 	<ol><a href="#">IB HOTA HL IA<a></ol>
 	<ol><a href="#">sample<a></ol>
